--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,14 @@
             <artifactId>javafx-controls</artifactId>
             <version>12</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.jfoenix/jfoenix -->
+        <dependency>
+            <groupId>com.jfoenix</groupId>
+            <artifactId>jfoenix</artifactId>
+            <version>9.0.8</version>
+        </dependency>
+
+
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
@@ -36,8 +44,10 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.1</version>
                 <configuration>
+
                     <mainClass>segGroupCW.App</mainClass>
                 </configuration>
+
             </plugin>
         </plugins>
     </build>
