--- a/pom.xml
+++ b/pom.xml
@@ -34,9 +34,9 @@
             <version>12</version>
         </dependency>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>RELEASE</version>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.6.0</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
